# 2024-P1-NguyenHuyAnhThu

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
